# disc

disc/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  ccopts.sh  config.status  configure  configure.ac  libtool  rebuild
disc/doc/: license
disc/libltdl/: aclocal.m4  config-h.in  configure
disc/src/: Makefile  Makefile.am  Makefile.in  Makefile.old  aaa_client.cfg  aaa_core.c  aaa_core.h  aaa_lib.cfg  aaa_lock.c  aaa_lock.h  aaa_module.c  aaa_module.h  aaa_parse_uri.c  aaa_parse_uri.h  aaa_server.cfg  cfg_init.c  cfg_init.h  cfg_parser.c  cfg_parser.h  client.c  client.h  cmd_proc.h  cmd_proc.lex  cmd_proc.y  config.h  counter.h  dprint.c  dprint.d  dprint.h  fastlock.h  globals.h  hash.c  hash.h  hash_table.c  hash_table.h  list.h  lock_ops.h  msg_queue.c  msg_queue.h  othrod_client.cfg  (+16 more)
disc/src/client/: Makefile  Makefile.am  Makefile.in  config.h  dest.c  dest.h  main.c  worker.c  worker.h
disc/src/client/modules/: Makefile.in
disc/src/client/modules/print/: Makefile.am  Makefile.in  print.c
disc/src/client/modules/sipauth/: Makefile.am  Makefile.in  sipaaa_defs.h  sipauth.c  tcp_socket.c  tcp_socket.h
disc/src/client/modules/sipauth/doc/: client.cfg
disc/src/diameter_api/: Makefile  Makefile.am  Makefile.in  aaa_lib.cfg  avp.c  avp.h  cfg_parser.c  cfg_parser.h  config.h  diameter_api.h  diameter_types.h  dictionary.c  dictionary.h  dprint.c  fastlock.h  global.h  globals.h  hash_table.c  hash_table.h  init_conf.c  init_conf.h  lock_alloc.h  lock_ops.h  locking.h  main.c  message.c  message.h  parser_f.h  peer.c  peer.h  sender.c  sender.h  session.c  session.h  sh_mutex.c  sh_mutex.h  timer.c  timer.h  trans.c  trans.h
disc/src/diameter_msg/: avp.c  diameter_msg.h  message.c
disc/src/mem/: Makefile  Makefile.in  f_malloc.c  f_malloc.h  mem.c  mem.h  memtest.c  q_malloc.c  q_malloc.h  shm_mem.c  shm_mem.h  vq_malloc.c  vq_malloc.h
disc/src/server/: Makefile  Makefile.am  cmd_proc.h  cmd_proc.lex  cmd_proc.y  interpret.c  interpret.h  list.h  main.c  worker.c  worker.h  yyerror.c
disc/src/server/modules/: Makefile.am
disc/src/server/modules/print/: Makefile.am  print.c
disc/src/server/modules/sipauth/: Makefile.am  Makefile.in  challenge.c  challenge.h  db.c  db.h  digest_parser.c  digest_parser.h  md5.c  md5.h  md5utils.h  nonce.c  nonce.h  param_parser.c  param_parser.h  rfc2617.c  rfc2617.h  sipaaa_defs.h  sipauth.c  sipauth.h  trim.h  ut.h
disc/src/server/modules/sipauth/doc/: server.cfg  sipauth.sql
disc/src/transport/: Makefile  Makefile.am  Makefile.in  common.c  common.h  ip_addr.h  peer.c  peer.h  resolve.h  tcp_accept.c  tcp_accept.h  tcp_receive.c  tcp_receive.h  tcp_shell.c  tcp_shell.h  trans.c  trans.h
