##
## $Id: Makefile.am,v 1.1 2003/03/24 18:45:11 andrei Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

noinst_LTLIBRARIES = libdiameter_api.la
libdiameter_api_la_SOURCES =	avp.c cfg_parser.c init_conf.c message.c \
								session.c \
								avp.h diameter_api.h message.h session.h \
								cfg_parser.h diameter_types.h init_conf.h \
								parser_f.h \
								# dictionary.c dictionary.h
libdiameter_api_la_LIBADD = 

EXTRA_DIST=	aaa_lib.cfg \
			#dictionary



