##
## $Id: Makefile.am,v 1.1 2003/03/24 18:45:11 andrei Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

noinst_LTLIBRARIES = libtransport.la
libtransport_la_SOURCES =	peer.c tcp_accept.c tcp_receive.c tcp_shell.c \
							trans.c \
							ip_addr.h peer.h resolve.h tcp_accept.h \
							tcp_receive.h tcp_shell.h trans.h
libtransport_la_LIBADD = 


