##
## $Id: Makefile.am,v 1.1 2008/02/29 16:02:38 anomarme Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

moduledir= $(libdir)/@PACKAGE@/@client_module_dir@
module_LTLIBRARIES = sipauth.la
sipauth_la_SOURCES = sipauth.c tcp_socket.c 
sipauth_la_LDFLAGS = -module -avoid-version
sipauth_la_LIBADD = 



